# scrtsync

./: .2.env  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  codebook.toml
.github/workflows/: build-and-publish.yml  build.yml  prepare-release.yml  release.yml  test-and-lint.yml
schemas/: scrtsync.schema.1.0.0.json  scrtsync.schema.1.1.0.json
src/: config.rs  main.rs  secrets.rs
src/job/: .scrtsync.default.json  diff.rs  edit.rs  init.rs  mod.rs  sync.rs
src/sources/: .gitignore  file.rs  k8s.rs  mod.rs  stdinout.rs  vault.rs
