[package]
name = "scrtsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
clap = { version = "4.2.7", features = ["derive"] }
serde = {version = "1.0.162", features = ["derive"] }
serde_json = "1.0"
url = "2.3.1"
