[package]
name = "scrtsync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scrtsync"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.83.0", features = ["runtime", "derive"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["full"] }
ureq = "2.6.2"
url = "2.3.1"
